log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashgenerator-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashgenerator
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      volumes:
        - name: shared-logs
          emptyDir: {}
        - name: config-volume
          configMap:
            name: log-output-configmap
            items:
              - key: information.txt
                path: information.txt
      containers:
        - name: writer
          image: sadmanyasar17/log-output-writer:v1
          imagePullPolicy: Never
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/shared
        - name: reader
          image: sadmanyasar17/log-output-reader:v1
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/shared
            - name: config-volume
              mountPath: /usr/src/app/config
