log_output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: hashgenerator
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
